# nessi

./: .travis.yml  README.md
.github/workflows/: install_test.yml
examples/: CMakeLists.txt  README.md
examples/inp/: info
examples/programs/: CMakeLists.txt  Holstein_bethe_Migdal.cpp  Holstein_bethe_Nambu_Migdal.cpp  Holstein_bethe_Nambu_uMig.cpp  Holstein_bethe_uMig.cpp  Holstein_impurity_decl.hpp  Holstein_impurity_impl.cpp  Holstein_impurity_singlebath_Migdal.cpp  Holstein_impurity_singlebath_uMig.cpp  Holstein_utils_decl.hpp  Holstein_utils_impl.cpp  fkm_bethe_quench.cpp  fkm_nessi_2x2.cpp  formats.hpp  gw.cpp  gw_kpoints_decl.hpp  gw_kpoints_impl.cpp  gw_latt_decl.hpp  gw_latt_impl.cpp  gw_selfene_decl.hpp  gw_selfene_impl.cpp  hubbard_chain_2b.cpp  hubbard_chain_gw.cpp  hubbard_chain_selfen_decl.hpp  hubbard_chain_selfen_impl.cpp  hubbard_chain_tpp.cpp  integration.cpp  test_equilibrium.cpp  test_jason.cpp  test_nonequilibrium.cpp  test_truncation_bethe_quench.cpp  test_truncation_utils_decl.hpp  test_truncation_utils_impl.hpp
examples/utils/: demo_Holstein.py  demo_Holstein_impurity.py  demo_Holstein_sc.py  demo_gw.py  demo_hubbard_chain.py  demo_integration.py  scaling_integration.py  test_equilibrium.py  test_nonequilibrium.py  test_truncation.py
libcntr/: CMakeLists.txt  Doxyfile.txt  README.md  main.dox_inc
libcntr/cntr/: CMakeLists.txt  cntr.hpp  cntr_bubble_decl.hpp  cntr_bubble_impl.hpp  cntr_bubble_moving_decl.hpp  cntr_bubble_moving_impl.hpp  cntr_convolution_decl.hpp  cntr_convolution_extern_templates.cpp  cntr_convolution_extern_templates.hpp  cntr_convolution_impl.hpp  cntr_cyclic_tstp_decl.hpp  cntr_cyclic_tstp_impl.hpp  cntr_decl.hpp  cntr_differentiation_decl.hpp  cntr_differentiation_extern_templates.cpp  cntr_differentiation_extern_templates.hpp  cntr_differentiation_impl.hpp  cntr_distributed_array_decl.hpp  cntr_distributed_array_extern_templates.cpp  cntr_distributed_array_extern_templates.hpp  cntr_distributed_array_impl.hpp  cntr_distributed_timestep_array_decl.hpp  cntr_distributed_timestep_array_extern_templates.cpp  cntr_distributed_timestep_array_extern_templates.hpp  cntr_distributed_timestep_array_impl.hpp  cntr_distributed_timestep_array_moving_decl.hpp  cntr_distributed_timestep_array_moving_impl.hpp  cntr_dyson_decl.hpp  cntr_dyson_extern_templates.cpp  cntr_dyson_extern_templates.hpp  cntr_dyson_impl.hpp  cntr_dyson_moving_impl.hpp  cntr_dyson_omp_decl.hpp  cntr_dyson_omp_extern_templates.cpp  cntr_dyson_omp_extern_templates.hpp  cntr_dyson_omp_impl.hpp  cntr_elements.hpp  cntr_equilibrium_decl.hpp  cntr_equilibrium_extern_templates.cpp  cntr_equilibrium_extern_templates.hpp  (+76 more)
libcntr/cntr/hdf5/: CMakeLists.txt  hdf5_interface.cpp  hdf5_interface.hpp  hdf5_interface_cntr.hpp  hdf5_interface_rpa.hpp
libcntr/cntr/truncation/: moving_function_member.hpp  moving_herm.hpp  moving_herm_diagram_utilities.hpp  moving_herm_dyson.hpp  moving_herm_member.hpp  moving_herm_timestep_member.hpp  moving_herm_utils.hpp  moving_herm_vie2.hpp
libcntr/cntr/utils/: read_inputfile.hpp
libcntr/example/: CMakeLists.txt  test_hodlr.cpp
libcntr/python/: ReadCNTR.py  ReadCNTRhdf5.py  SpectrumCNTRhdf5.py
libcntr/python3/: ReadCNTR.py  ReadCNTRhdf5.py  SpectrumCNTRhdf5.py
libcntr/test/: CMakeLists.txt  bubble.cpp  cntr.nb  convolution.cpp  distributed_array_mpi.cpp  distributed_array_mpi.hpp  distributed_timestep_array_mpi.hpp  downfold.cpp  dyson.cpp  dyson_new.cpp  equilibrium.cpp  fkm_bethe_quench.cpp  fkm_bethe_quench.h5  function.cpp  getset.cpp  getset_nonherm.cpp  green_single_pole_XX.cpp  herm_matrix_algebra.cpp  herm_matrix_hdf5.cpp  herm_matrix_member.cpp  herm_matrix_mpi.hpp  herm_matrix_readwrite.cpp  herm_matrix_readwrite_hdf5.cpp  herm_matrix_setget_timestep.cpp  herm_matrix_submatrix.cpp  herm_member.cpp  herm_member_timestep.cpp  herm_member_timestep_view.cpp  integration.cpp  left_right_multiply.cpp  linalg.cpp  matsubara.cpp  reduce_timestep.hpp  runtest_mpi.cpp  submatrix_hermmatrix.cpp  test_LF_phonon_factor.cpp  test_bubble.cpp  test_convolution_bose_1.cpp  test_differentiation.cpp  test_dyson_cdw.cpp  (+7 more)
